--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
           <li><a href="#resume">Resume</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Hire me</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://twitter.com/intellisensense" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.facebook.com/aluko.monsur?mibextid=LQQJ4d" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/intellisense01" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/kehinde-aluko-265231151?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
     </div>
@@ -82,7 +81,7 @@
           <img src="assets/img/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Development &amp; UI/UX Graphic Designer</h3>
+          <h3>FROM PIXELS TO PERSONALITY</h3>
           <p>
             Aluko Kehinde is a Passionate Frontend Web Developer and Graphic Designer with a knack for crafting seamless user experiences. 
             Proficient in HTML, CSS, Javascript and WordPress to bring web designs to life. A creative mind well-versed in Figma, CorelDRAW, and Photoshop, adept at translating ideas into captivating visuals. 
@@ -92,7 +91,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 20th Jan,</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.scaptech.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Curriculum vitae:</strong> <a href="https://drive.google.com/file/d/1ek8vUxnmTTuBeExxyTbi2NsZoAgW0YXc/view?usp=drive_link"> Download Here</a> </li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +234 9063-937-137</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Lagos State, Nig.</li>
               </ul>
@@ -305,9 +304,9 @@
              Our marketing materials have never looked better, and we look forward to collaborating again!
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-          <h3>Saul Goodman</h3>
-          <h4>Ceo &amp; Founder</h4>
+          <img src="assets/img/testimonials/testi.png" class="testimonial-img" alt="">
+          <h3>Fascot</h3>
+          <h4>CEO Fascot exchange</h4>
         </div>
 
         <div class="testimonial-item">
@@ -317,21 +316,21 @@
             The website he built is not only visually stunning but also user-friendly. Highly recommended!
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-          <h3>Sara Wilsson</h3>
-          <h4>Designer</h4>
+          <img src="assets/img/testimonials/testi.png" class="testimonial-img" alt="">
+          <h3>z1tripplet</h3>
+          <h4>Chief Executive Officer (CEO)</h4>
         </div>
 
         <div class="testimonial-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            I had the privilege of collaborating with kenny on a UI/UX project. Their creative flair and deep understanding of 
-            user experience truly impressed me. [Your Name] has a rare ability to make complex designs intuitive.
+            I had the privilege of collaborating with kenny on a UI/UX project. His creative flair and deep understanding of 
+            user experience truly impressed me. Aluko has a rare ability to make complex designs intuitive.
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-          <h3>Jena Karlis</h3>
-          <h4>Store Owner</h4>
+          <img src="assets/img/testimonials/testi.png" class="testimonial-img" alt="">
+          <h3>Samson</h3>
+          <h4>Product Designer</h4>
         </div>
 
         <div class="testimonial-item">
@@ -341,7 +340,7 @@
              problem-solving greatly contributed to the success of our projects. A true asset to any team.
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testi.png" class="testimonial-img" alt="">
           <h3>Michaal Chidera</h3>
           <h4>CEO Dech Consult Ltd</h4>
         </div>
@@ -353,7 +352,7 @@
             captured our brand's essence perfectly, and the impact on our customer engagement was immediate. Thank you!
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testi.png" class="testimonial-img" alt="">
           <h3>John Larson</h3>
           <h4>Entrepreneur</h4>
         </div>
@@ -531,16 +530,16 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Web</li>
-            <li data-filter=".filter-card">Graphics</li>
-            <li data-filter=".filter-web">uiux</li>
+            <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-graphics">Graphics</li>
+            <li data-filter=".filter-uiux">uiux</li>
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/z1trippleT.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -549,7 +548,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/z1trippleT.png" data-gall="portfolioGallery" class="venobox"
                   title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="z1tripplet.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -565,14 +564,14 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/xtralarge.png" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="xtralarge.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/fascot.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -581,14 +580,14 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/fascot.png" data-gall="portfolioGallery" class="venobox"
                   title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="fascot.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/dech.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -597,7 +596,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/dech.png" data-gall="portfolioGallery" class="venobox"
                   title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="dech.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -613,55 +612,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/wemabod.png" data-gall="portfolioGallery" class="venobox"
                   title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/forthermon.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Fort Hermon</h4>
-              <p>Report Dashboard</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/forthermon.png" data-gall="portfolioGallery" class="venobox"
-                  title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/survey.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>SURVEY</h4>
-              <p>Data Gathering</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/survey.png" data-gall="portfolioGallery" class="venobox"
-                  title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Tarrier.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>TARRIER UI DESIGN</h4>
-              <p>RIDE HAILING</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Tarrier.png" data-gall="portfolioGallery" class="venobox"
-                  title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="wemabod.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -670,6 +621,54 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/forthermon.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Fort Hermon</h4>
+              <p>Report Dashboard</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/forthermon.png" data-gall="portfolioGallery" class="venobox"
+                  title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="forthermon.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/survey.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>SURVEY</h4>
+              <p>Data Gathering</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/survey.png" data-gall="portfolioGallery" class="venobox"
+                  title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="survey.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Tarrier.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TARRIER UI DESIGN</h4>
+              <p>RIDE HAILING</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Tarrier.png" data-gall="portfolioGallery" class="venobox"
+                  title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="tarrier.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/billz.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>BILLZ UI DESIGN</h4>
@@ -677,7 +676,55 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/billz.png" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="billz.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/header.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>HEADER LANDING PAGE UI </h4>
+              <p>Haader Web Design</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/header.png" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="header.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/incident mgt app.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>INCIDENT MANAGEMENT APP</h4>
+              <p>Incident Tracker App</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/incident mgt app.png" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="incident.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/meetmatch app.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>MEET MATCH UI DESIGN</h4>
+              <p>Dating App App</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/meetmatch app.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="meetmatch.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -704,7 +751,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>1, Egberongbe Street, Ayobo, Lagos</p>
+            <p>Lagos | Ogun Nigeria</p>
           </div>
         </div>
 
