--- a/index.html
+++ b/index.html
@@ -760,11 +760,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://twitter.com/intellisensense" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://www.facebook.com/aluko.monsur?mibextid=LQQJ4d" class="facebook"><i class="icofont-facebook"></i></a>
+              <a href="https://www.instagram.com/intellisense01" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/kehinde-aluko-265231151?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
         </div>
