--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
             <img src="assets/img/portfolio/meetmatch app.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>MEET MATCH UI DESIGN</h4>
-              <p>Dating App App</p>
+              <p>Dating App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/meetmatch app.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
@@ -730,6 +730,40 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-uiux">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/notionpay.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>NOTIONPAY UI DESIGN</h4>
+              <p>Fintech App </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/notionpay.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="notionpay.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-graphics">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/g6.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Dammy Stitches Logo</h4>
+              <p>Brand logo </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/g6.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="#" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+       
 
       </div>
 
