--- a/index.html
+++ b/index.html
@@ -763,13 +763,29 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-graphics">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/g14.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Training Flier Design</h4>
+              <p>Flier Design</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/g14.png" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="#" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-graphics">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/g15.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Dammy Stitches Logo</h4>
-              <p>Brand logo </p>
+              <h4>Jobite Garden City </h4>
+              <p>Poster Design </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/g15.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
@@ -785,8 +801,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/g2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Dammy Stitches Logo</h4>
-              <p>Brand logo </p>
+              <h4>Personal Profile Design</h4>
+              <p>eFlier</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/g2.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
@@ -799,12 +815,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-graphics">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/g14.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/g1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Dammy Stitches Logo</h4>
-              <p>Brand logo </p>
+              <h4>Chop and chill</h4>
+              <p>Flier Design</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/g14.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="assets/img/portfolio/g1.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="#" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -812,6 +828,25 @@
             </div>
           </div>
         </div>
+
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-graphics">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/g7.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Dammy Stitches Logo</h4>
+              <p>Brand logo </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/g7.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="#" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+   
+   
 
 
 
