--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/g13.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Dammy Stitches Logo</h4>
-              <p>Brand logo </p>
+              <h4>Training Flier</h4>
+              <p>Flier Design</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/g13.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
